fixed body shrinking on small screen

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -6,10 +6,11 @@
 
 .hero-section-heading{
     margin-bottom: 15px;
+    overflow-wrap: break-word;
 }
 
 .hero-section-text{
-    width: 500px;
+    max-width: 500px;
     margin-bottom: 35px;
 }
 
@@ -27,18 +28,9 @@
     text-decoration: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 .hero-section-img{
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
